# loongson-minitool

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deb-loong64.yml  rust.yml
assets/: loongson-minitool.desktop
src/: main.rs  ui.rs
